--- a/.classpath
+++ b/.classpath
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="C:/Users/Tux/Downloads/bukkit-1.7.5-R0.1-20140402.231158-6.jar" sourcepath="C:/Users/Tux/Downloads/Bukkit-master.zip">
-		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/dev/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Tux/Downloads/mongo-java-driver-2.11.0.jar" sourcepath="C:/Users/Tux/Downloads/mongo-java-driver-2.11.0-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/C:/Users/Tux/Downloads/mongo-java-driver-2.11.0-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Maven: org.bukkit:bukkit:1.7.5-R0.1-SNAPSHOT"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Maven: org.mongodb:mongo-java-driver:2.11.4"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
